# module-27-task-2

./: CMakeLists.txt  modules dependency diagram.docx  task_description.docx
include/: GFCircle.h  GFRectangle.h  GFSquare.h  GFTriangle.h  figures.h  geometric_figure.h  vector2dDouble.h
src/: CMakeLists.txt  GFCircle.cpp  GFRectangle.cpp  GFSquare.cpp  GFTriangle.cpp  geometric_figure.cpp  main.cpp  vector2dDouble.cpp
